# docx-template

./: .gitignore  Cargo.toml  README.md
src/: docx.rs  error.rs  image.rs  lib.rs  merge.rs  request.rs
src/docx/: template.rs  word.rs
