[package]
name = "docx-template"
version = "0.1.1"
authors = ["tanghy <tanghy@cloudthink.space>"]
homepage = "https://www.cloudthink.space"
publish = false
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/CloudThinkSpace/docx-template"
rust-version = "1.85.0"

[dependencies]
quick-xml = "0.37.5"
zip = "4.0.0"
thiserror = "2.0.12"
uuid = { version = "1.17.0", features = ["v4"] }
reqwest = "0.12.18"