[package]
name = "docx-template"
version = "0.1.8"
authors = ["tanghy <tanghy@cloudthink.space>"]
homepage = "https://www.cloudthink.space"
publish = true
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/CloudThinkSpace/docx-template"
rust-version = "1.85.0"
description = "This is a tool for replacing docx file templates."

[dependencies]
quick-xml = "0.37.5"
zip = "4.0.0"
thiserror = "2.0.12"
uuid = { version = "1.17.0", features = ["v4"] }
reqwest = "0.12.18"
image = "0.25.6"

[dev-dependencies]
tokio = { version = "1.45.1", features = ["full"] }
